mark as no conflict fix

--- a/src/main/webapp/app/exercises/text/assess-new/textblock-assessment-card/textblock-assessment-card.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/textblock-assessment-card/textblock-assessment-card.component.html
@@ -29,4 +29,5 @@
     [conflictType]="conflictType"
     [conflictMode]="conflictMode"
     [isLeftConflictingFeedback]="isLeftConflictingFeedback"
+    [isSelectedConflict]="conflictMode && isConflictingFeedback && !isLeftConflictingFeedback && selected"
 ></jhi-textblock-feedback-editor>
