--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise.component.html
@@ -70,10 +70,10 @@
             <tbody>
                 <tr *ngFor="let programmingExercise of programmingExercises; trackBy: trackId">
                     <td class="d-none d-md-table-cell">
-                        <a [routerLink]="['/course-management', programmingExercise.course.id, 'programming-exercises', programmingExercise.id]">{{ programmingExercise.id }}</a>
+                        <a [routerLink]="['/course-management', courseId, 'programming-exercises', programmingExercise.id]">{{ programmingExercise.id }}</a>
                     </td>
                     <td>
-                        <a [routerLink]="['/course-management', programmingExercise.course.id, 'programming-exercises', programmingExercise.id]">{{ programmingExercise.title }}</a>
+                        <a [routerLink]="['/course-management', courseId, 'programming-exercises', programmingExercise.id]">{{ programmingExercise.title }}</a>
                         <jhi-programming-exercise-test-cases-dirty-warning
                             class="ml-2"
                             [programmingExerciseId]="programmingExercise.id"
@@ -223,7 +223,7 @@
                                 <button
                                     type="submit"
                                     *ngIf="programmingExercise.isAtLeastTutor || course.isAtLeastTutor"
-                                    [routerLink]="['/course-management', programmingExercise.course.id, 'exercises', programmingExercise.id, 'scores']"
+                                    [routerLink]="['/course-management', courseId, 'exercises', programmingExercise.id, 'scores']"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'eye'"></fa-icon>
@@ -283,7 +283,7 @@
                                 <button
                                     type="submit"
                                     *ngIf="programmingExercise.isAtLeastInstructor || course.isAtLeastInstructor"
-                                    [routerLink]="['/course-management', programmingExercise.course.id, 'programming-exercises', programmingExercise.id]"
+                                    [routerLink]="['/course-management', courseId, 'programming-exercises', programmingExercise.id]"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'eye'"></fa-icon>
@@ -292,7 +292,7 @@
                                 <button
                                     type="submit"
                                     *ngIf="programmingExercise.isAtLeastInstructor || course.isAtLeastInstructor"
-                                    [routerLink]="['/course-management', programmingExercise.course.id, 'programming-exercises', programmingExercise.id, 'edit']"
+                                    [routerLink]="['/course-management', courseId, 'programming-exercises', programmingExercise.id, 'edit']"
                                     class="btn btn-primary btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'pencil-alt'"></fa-icon>
