--- a/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
+++ b/src/main/webapp/app/course/dashboards/tutor-course-dashboard/tutor-course-dashboard.component.html
@@ -14,7 +14,7 @@
                     routerLink="/course-management/{{ course?.id }}/scores"
                     routerLinkActive="active"
                 >
-                    <fa-icon [icon]="'info-circle'" [fixedWidth]="true" style="color: white;"></fa-icon>
+                    <fa-icon [icon]="'info-circle'" [fixedWidth]="true" style="color: white"></fa-icon>
                 </a>
             </h2>
         </div>
