--- a/src/main/webapp/app/exam/manage/test-runs/create-test-run-modal.component.html
+++ b/src/main/webapp/app/exam/manage/test-runs/create-test-run-modal.component.html
@@ -10,9 +10,9 @@
             <p>Set the working time:</p>
             <form class="d-flex" [formGroup]="workingTimeForm">
                 <div class="mr-2">
-                    <input formControlName="minutes" type="number" style="width: 60px; height: 35px;" class="text-center" min="0" step="1" required />
+                    <input formControlName="minutes" type="number" style="width: 60px; height: 35px" class="text-center" min="0" step="1" required />
                     :
-                    <input formControlName="seconds" type="number" style="width: 60px; height: 35px;" class="text-center" min="0" max="59" step="1" required />
+                    <input formControlName="seconds" type="number" style="width: 60px; height: 35px" class="text-center" min="0" max="59" step="1" required />
                 </div>
             </form>
         </div>
