--- a/src/main/webapp/app/exercises/shared/result/result-detail.component.html
+++ b/src/main/webapp/app/exercises/shared/result/result-detail.component.html
@@ -13,17 +13,21 @@
     Feedbacks container
 -->
     <ng-template #feedbackContainer>
-        <ng-container *ngIf="!loadingFailed && filteredFeedbackList && filteredFeedbackList.length; else buildLogsContainer">
-            <div *ngFor="let feedback of filteredFeedbackList; last as isLast">
-                <div [ngClass]="['feedback-item', getClassNameForFeedbackItem(feedback)]">
+        <div *ngIf="!loadingFailed && filteredFeedbackList && filteredFeedbackList.length; else buildLogsContainer" class="result-detail-container">
+            <div *ngIf="showFeedbackCredits" class="result-detail-graph">
+                <jhi-result-graph [feedbackList]="feedbackList" [maxPoints]="maxPoints"></jhi-result-graph>
+                <hr />
+            </div>
+            <div class="feedback-list">
+                <div *ngFor="let feedback of filteredFeedbackList; last as isLast" [ngClass]="['feedback-item', getClassNameForFeedbackItem(feedback)]">
                     <span>{{ feedback.category }}</span>
-                    <span class="feedback-points" *ngIf="feedback.credits">{{ feedback.credits.toFixed(1) }}P</span>
+                    <span class="feedback-points" *ngIf="showFeedbackCredits && feedback.credits">{{ feedback.credits.toFixed(1) }}P</span>
                     <span class="feedback-title">{{ feedback.title }}</span>
                     <p *ngIf="feedback.text">{{ feedback.text }}</p>
                     <p *ngElse>No feedback available</p>
                 </div>
             </div>
-        </ng-container>
+        </div>
     </ng-template>
     <!--
     Build logs container
